# DataSafeS3

./: .env.example  .env.vault.example  .gitignore  AGENTS.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.audit.yml  docker-compose.dev.yml  docker-compose.ha.yml  docker-compose.local-binary.yml  docker-compose.local-data.yml  docker-compose.security-test.yml  docker-compose.vault-product.yml  docker-compose.vault.yml  docker-compose.yml  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
clients/: README.md
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/binaries/: .gitkeep
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  why-datasafe.md
scripts/: benchmark-list-upload.ps1  build-console.cmd  build-datasafe-sync.ps1  build-datasafe-sync.sh  capture-screenshots.mjs  dev-docker-local-binary.cmd  dev-docker-nobuild.cmd  dev-local-console.cmd  dev-local-server.cmd  dev-local.cmd  dr-drill.ps1  ensure-docker-pull-proxy.cmd  extract-changelog-section.sh  feature-audit-preflight.ps1  feature-audit-test.ps1  federation-3node-demo.ps1  lint-openapi.ps1  local-direct-proxy.js  migrate-docs-bilingual.py  oidc-browser-e2e.mjs  openapi-drift-check.ps1  postgres-failover.ps1  postgres-failover.sh  reference-arch-backup.ps1  reference-arch-corp-files.ps1  reference-arch-k8s.ps1  render-diagrams.cmd  reset-fresh-install.cmd  reset-fresh-install.ps1  setup-kibana-logs.cmd  setup-kibana-logs.ps1  (+7 more)
(+631 files in other folders)
